Misc changes unfortunately

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,12 @@
         height: 80vh; /* Height for desktop */
     }
 }
+
+.button-hover-effect {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .button-hover-effect:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  }
