--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   }
 
-@media screen and (max-width: 600px) { /* Adjust the width according to your breakpoint */
+@media screen and (max-width: 600px) {
 .hide-on-mobile {
     display: none;
 }
